<resources>
    <string name="app_name">Barberware</string>
    <string name="mensagem_login">Bem-vindo a barberware Faça seu login</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_config">Configuração</string>
    <string name="search_title">searchView</string>
    <string name="nav_agendamentos">Agendamentos</string>
    <string name="nav_portifolio">Portifolio</string>
    <string name="nav_localizacao">Localizacao</string>
    <string name="nav_sair">Sair</string>
    <string name="nav_drawer_open">Abrir</string>
    <string name="nav_drawer_close">Fechar</string>
    <string name="action_adicionar">adicionar</string>
    <string name="API_KEY">AIzaSyAfBOuBMSXmxV4Z9Xvv9MCfZF6IY_1hMG8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>