<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_portifolio"
            android:title="@string/nav_portifolio"
            android:icon="@drawable/ic_portifolio"
            />
        <item
            android:id="@+id/nav_agendamentos"
            android:title="@string/nav_agendamentos"
            android:icon="@drawable/ic_agendamentos"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_localizacao"
            android:title="@string/nav_localizacao"
            android:icon="@drawable/ic_localizacao"
            />
        <item
            android:id="@+id/nav_sair"
            android:title="@string/nav_sair"
            android:icon="@drawable/ic_sair"
            />
    </group>
</menu>