<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    android:icon="@android:drawable/ic_menu_search"-->
<!--    <item-->
<!--        android:id="@+id/action_buscar"-->
<!--        android:icon="@drawable/ic_buscar_white"-->
<!--        android:title="@string/action_buscar"-->
<!--        app:showAsAction="always"-->
<!--        />-->
    <item android:id="@+id/searchView"
        android:title="@string/search_title"
        android:icon="@drawable/ic_buscar_white"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/action_atualizar"
        android:icon="@drawable/ic_atualizar_white"
        android:title="@string/action_atualizar"

        app:showAsAction="ifRoom"

        />
    <item
        android:id="@+id/action_config"
        android:icon="@drawable/ic_configuracoes_white"
        android:title="@string/action_config"
        app:showAsAction="never"
        />


</menu>